--- a/button.kv
+++ b/button.kv
@@ -1,17 +1,44 @@
 #kivy 1.1.1
 
+ButtonGame:
+
 <ButtonGame>:
-    canvas:
-        Color:
-            rgb: 1.0, 1.0, 1.0
-        Rectangle:
-            pos: self.center_x-5, 0
-            size: 10, self.height
+        canvas:
+            Color:
+                rgb: 1.0, 1.0, 1.0
+            Rectangle:
+                pos: self.center_x, 0
+                size: 10, self.height
+
+            Label:
+                font_size: 70
+                center_x: root.width/2
+                top: root.top - 50
+                rgb: 1.0, 0.0, 0.0
+                text: "Rage Buttons"
+
+            Button:
+                rgb: 0.0, 1.0, 0.0
+                pos = self.center_x, self.center_y - 40
+                text: "Start"
+                on_press: beginGame()
+
+duringGame:
+
+<duringGame@BoxLayout>:
+    orientation = 'horizontal'
+    FloatLayout:
+        Label:
+            font_size: 40
+            text: 'Score:' + str(root.wins)
+            size: 40, 40
+            pos: 0, root.top - self.height /2 - 20
+            color: 0.0, 0.0, 0.0
 
         Label:
-            font_size: 70
-            center_x: root.width/2
-            top: root.top - 50
-            text: "Rage Buttons"
+            font_size: 32
+            text: root.
+            
+
 
         
